lighthouse test: Improve link contrast, ensure navigation and alt text

--- a/themes/tagged-notes/assets/_defaults.scss
+++ b/themes/tagged-notes/assets/_defaults.scss
@@ -52,8 +52,8 @@ $hint-colors: (
   --gray-200: rgba(255, 255, 255, 0.2);
   --gray-500: rgba(255, 255, 255, 0.5);
 
-  --color-link: #84b2ff;
-  --color-visited-link: #84b2ff;
+  --color-link: #88b4ff;
+  --color-visited-link: #88b4ff;
 
   --body-background: #38474f;
   --body-font-color: #e9ecef;
